--- a/solution/index.html
+++ b/solution/index.html
@@ -6,8 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./index.js" defer></script>
     <link rel="stylesheet" href="./styles.css" />
-    <title>Tasks manager</title>
+    <title >Tasks manager</title>
 </head>
 <body>
+    <h1 id= "page-title"></h1>
+    <input type="text" id = "search">
+    <section>
+        <ul class = "to-do-tasks"></ul>
+        <input type="text" id = "add-to-do-task">
+        <button id = "submit-add-to-do"></button>
+    </section>
+    <section>
+        <ul class = "in-progress-tasks"></ul>
+        <input type="text" id = "add-in-progress-task">
+        <button id = "submit-add-in-progress"></button>
+    </section>
+    <section>
+        <ul class = "done-tasks"></ul>
+        <input type="text" id = "add-done-task">
+        <button id = "submit-add-done"></button>
+    </section>
+
+
+
+
 </body>
 </html>
