--- a/solution/index.html
+++ b/solution/index.html
@@ -10,22 +10,9 @@
 </head>
 <body>
     <h1 id= "page-title"></h1>
-    <input type="text" id = "search">
-    <section>
-        <ul class = "to-do-tasks"></ul>
-        <input type="text" id = "add-to-do-task">
-        <button id = "submit-add-to-do"></button>
-    </section>
-    <section>
-        <ul class = "in-progress-tasks"></ul>
-        <input type="text" id = "add-in-progress-task">
-        <button id = "submit-add-in-progress"></button>
-    </section>
-    <section>
-        <ul class = "done-tasks"></ul>
-        <input type="text" id = "add-done-task">
-        <button id = "submit-add-done"></button>
-    </section>
+    <div id = "container">
+    </div>
+    
 
 
 
