--- a/solution/index.html
+++ b/solution/index.html
@@ -9,7 +9,8 @@
     <title >Tasks manager</title>
 </head>
 <body>
-    <h1 id= "page-title"></h1>
+    <input type="text" id="search-bar"  placeholder="Search for tasks.." >
+    <h1 id= "page-title">kanban board</h1>
     <div id = quote></div>
     <div id = "container">
     </div>
