--- a/solution/index.html
+++ b/solution/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="refresh" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./index.js" defer></script>
+    <script src="./soiution/index.js" defer></script>
     <link rel="stylesheet" href="./styles.css" />
     <title >Tasks manager</title>
 </head>
